--- a/app/femr/ui/views/partials/helpers/outputHeightOrNA.scala.html
+++ b/app/femr/ui/views/partials/helpers/outputHeightOrNA.scala.html
@@ -14,11 +14,11 @@
         @if((inches != null && feet != null) && (inches.equals("0") && feet.equals("0"))) {
             @emptyValue
         } else {
-            @if(feet != null && !feet.equals("null")) {
+            @if(feet != null) {
                 @* Truncate feet at period so feet is a whole value *@
                 @feet.replaceAll("\\..*", "")'
             }
-            @if(inches != null && !inches.equals("null")) {
+            @if(inches != null) {
                 @* Truncate inches at period so inches is a whole value *@
                 @inches.replaceAll("\\..*", "")"
             }
